# Ercot-Battery-Arbitrage

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  daily-refresh.yml
.streamlit/: config.toml
config/: battery.yaml  data.yaml  market.yaml  model.yaml
data/processed/: da_prices.parquet  load.parquet  rt_prices.parquet  weather.parquet
data/results/: backtest.parquet  backtest_annual.parquet  backtest_annualised_per_kw_year.parquet  backtest_concentration.parquet  backtest_monthly.parquet  backtest_sensitivities.parquet  data_quality.json  forecast_metrics.parquet  forecasts.parquet
src/ercot_bess/: __init__.py  config.py
src/ercot_bess/api/: app.py  orchestrator.py  serialise.py  store.py
src/ercot_bess/backtest/: __init__.py  __main__.py  aggregate.py  build.py  engine.py  schema.py
src/ercot_bess/dashboard/: app.py  data.py  views.py
src/ercot_bess/features/: __main__.py  build.py  schema.py
src/ercot_bess/forecast/: __main__.py  build.py  evaluate.py  metrics.py  models.py  schema.py
src/ercot_bess/ingest/: __init__.py  __main__.py  eia930.py  ercot.py  gridstatus_io.py  raw_store.py  weather.py
tests/fixtures/: eia930_fuel.json  eia930_region.json
tests/integration/: test_api.py  test_app.py  test_backtest.py  test_build.py  test_features.py  test_forecast.py  test_ingest.py  test_orchestrator.py
tests/unit/: test_api.py  test_backtest.py  test_config.py  test_dashboard.py  test_features.py  test_forecast.py  test_ingest.py  test_optimise.py  test_validate.py
(+7 files in other folders)
